[tool.poetry]
name = "miniurl"
version = "0.1.0"
description = "python url shortner"
authors = ["Frank Owusu Boakye <oboy.nitro1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.5.1"
SQLAlchemy = "^1.4.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
